--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
-
 AUTHOR:
   NAME: '陳放為'
-  GITHUB: 'AbyChan'
+  GITHUB: 'fwchen'
 
 BLOG:
+  BLOGDIR: 'articles'
   NAME: '陈放为的博客'
   DESC: 'And the Chamber of Secrets'
   TMPDIR: '/tmp'
@@ -16,10 +16,10 @@ BLOG:
   SORT_ARTICLE_BY: 'create'
   ARTICLE_SUMMARY_CHAR_NUMBER: 300
 
-
 STYLE:
   THEMEDIR: '@themes'
   THEME: 'hg'
+  THEME_CONFIG_FILE: 'theme.config.yaml'
 
 SERVE:
   HOST: '0.0.0.0'
