--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "blog/@themes/white-card"]
 	path = blog/@themes/white-card
 	url = git@github.com:wu-xing/white-card.git
+[submodule "@themes/hg"]
+	path = @themes/hg
+	url = git@github.com:starfish-organization/nobbb-theme-hg.git
