--- a/haseo.yaml
+++ b/haseo.yaml
@@ -1,6 +1,6 @@
 name: BLOG
 flow:
-  - install: git submodule init && git submodule update && cd @themes/hg && git checkout master && git pull origin master
+  - install: yarn install && git submodule init && git submodule update && cd @themes/hg && git checkout master && git pull origin master
   - theme install: cd @themes/hg && yarn install
   - theme build: cd @themes/hg && npm run build && npm run build-ssr
   - render: ./node_modules/.bin/starfish render .
