--- a/haseo.yaml
+++ b/haseo.yaml
@@ -5,4 +5,4 @@ flow:
   - theme build: cd @themes/hg && npm run build && npm run build-ssr
   - render: ./node_modules/.bin/starfish render .
   - ssrify: ./node_modules/.bin/starfish ssr .
-  - update site: rm /var/www/blog && cp -r build /var/www/blog
+  - update site: rm -rf /var/www/blog > /dev/nul && cp -r build /var/www/blog
