--- a/haseo.yaml
+++ b/haseo.yaml
@@ -1,5 +1,6 @@
 name: BLOG
 flow:
+  - clear-starfish: rm -rf node_modules/
   - install: yarn install && git submodule init && git submodule update && cd @themes/hg && git checkout master && git pull origin master
   - theme install: cd @themes/hg && yarn install
   - theme build: cd @themes/hg && npm run build && npm run build-ssr
