--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name blog.codemarine.top;
+    server_name blog.codemarine.top blog.chenfangwei.xyz;
     root /var/www/blog;
     index index.html index.htm;
 }
