add blog configure blog and http toggle

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,8 @@ AUTHOR:
 
 BLOG:
   BLOGDIR: 'articles'
+  DOMAIN: 'blog.chenfangwei.xyz'
+  HTTPS: false
   NAME: '陈放为的博客'
   DESC: 'And the Chamber of Secrets'
   TMPDIR: '/tmp'
