--- a/haseo.yaml
+++ b/haseo.yaml
@@ -1,4 +1,5 @@
 name: BLOG
+watch: true
 flow:
   - clean-nm: rm -rf node_modules/
   - install: yarn install --pure-lockfile && git submodule init && git submodule update && cd @themes/hg && git checkout master && git pull origin master
