ignore category render

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,7 @@ BLOG:
   ALL_PAGE_ARTICLE_NUMBER: 20
   SORT_ARTICLE_BY: 'create'
   ARTICLE_SUMMARY_CHAR_NUMBER: 300
+  IGNORE_CATEGORY_RENDER: true
   
 STYLE:
   THEMEDIR: '@themes'
