--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,15 @@
 server {
-    listen 80;
+    listen 80 default_server;
     listen [::]:80;
-    server_name blog.codemarine.top blog.chenfangwei.xyz;
-    root /var/www/blog;
-    index index.html index.htm;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files        $uri $uri/ /index.html =404;
+    }
+
+    location ~* \.(?:css|js|png|jpg|svg|woff2)$ {
+        add_header       'Cache-Control' 'max-age=604800';
+    }
 }
