--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@starfishx/theme-hg": "0.0.5",
-    "starfish-cli": "1.1.11"
+    "@starfishx/cli": "1.0.1"
   },
   "devDependencies": {},
   "scripts": {
