--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My Z Blog",
   "main": "index.js",
   "dependencies": {
-    "@starfishx/cli": "1.0.3"
+    "@starfishx/cli": "1.0.3",
+    "@starfishx/theme-hg": "0.0.15"
   },
   "devDependencies": {},
   "scripts": {
