--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "@starfishx/cli": "1.0.10",
-    "@starfishx/theme-hg": "0.0.23"
+    "@starfishx/theme-hg": "0.0.27"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "set-blocking": "^2.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
