--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My Z Blog",
   "main": "index.js",
   "dependencies": {
-    "@starfishx/cli": "1.0.12",
+    "@starfishx/cli": "^1.0.13",
     "@starfishx/theme-hg": "0.0.27"
   },
   "devDependencies": {
