--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ BLOG:
   NAME: '陈放为的博客'
   DESC: 'And the Chamber of Secrets'
   PORT: 8079
-  HOST: '127.0.0.1'
+  HOST: 'www.chencanhao.com'
   INDEX_ARTICLE_NUMBER: 7
   CATEGORY_ARTICLE_NUMBER: 20
   ALL_PAGE_ARTICLE_NUMBER: 20
